--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         <!-- Custom styles for this template -->
         <link href="css/justified-nav.css" rel="stylesheet">
 
+        <!-- Google Analytics -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-7471598-17', 'auto');
+          ga('send', 'pageview');
+
+        </script>
     </head>
 
     <body>
@@ -52,9 +63,8 @@
             </nav>
           </div>
 
-          <div id="content">
-              
-          </div>
+          <!-- This is where the magic happens -->
+          <div id="content"></div>
 
           <!-- Site footer -->
           <footer class="footer">
